tests/ui/de-field-attr-try-from-and-from.stderr
error: The `from` and `try_from` attributes can't be used together.
 --> tests/ui/de-field-attr-try-from-and-from.rs:5:14
  |
5 |     #[deserr(try_from(String) = String::parse -> usize)]
  |              ^^^^^^^^
